<li>Implemented Jacobian fine-tuning measure written by Dylan Harries and
company - arXiv:1709.07895