@@ -1,8 +1,8 @@
-# SOFTSUSY4.1.3 SLHA compliant output
+# SOFTSUSY4.1.4 SLHA compliant output
 # B.C. Allanach, Comput. Phys. Commun. 143 (2002) 305-331, hep-ph/0104145
 Block SPINFO          # Program information
      1    SOFTSUSY    # spectrum calculator
-     2    4.1.3       # version number
+     2    4.1.4       # version number
 Block MODSEL  # Select model
      1    1   # sugra
 Block SMINPUTS             # Standard Model inputs
