@@ -1,4 +1,4 @@
-# SOFTSUSY4.1.3 test program, Ben Allanach
+# SOFTSUSY4.1.4 test program, Ben Allanach
 # If you use SOFTSUSY, please refer to B.C. Allanach,
 # Comput. Phys. Commun. 143 (2002) 305, hep-ph/0104145
 # Low energy data in SOFTSUSY: mixing=0 TOLERANCE=1.000000e-04
