@@ -1,2 +1,4 @@
-<li>Implemented Jacobian fine-tuning measure written by Dylan Harries and
-company - arXiv:1709.07895
+<li>Changes made to gluino 3-body decays for first two generations of squarks:
+- Avoidance of negative PWs – in the gluino 3-body decays, for very compressed spectra (typically where therefore only 3-body decays producing first generation quarks are allowed) there are very fine cancellations in the tails of the phase space region close to the decay being forbidden, this can mean numerical precision produces negative Pws. To avoid this, for such regions if the PW comes out negative we re-evaluate it in the mq = 0 limit, this should not affect the PW as these regions are suppressed anyway. This is not an issue as mup\mdown is small relative to LambdaQCD, and can be taken as 0 without issues - spectra with mass splittings of order LambdaQCD would have to be treated differently anyway with decays to pions rather than separate quarks.
+<li>Limits corrected for gluino 3-body decays to charginos and quarks of the first two generations. The limits were missing some pieces proportional to mq or mq’ for the first two generations, again these effects are minimal, extending or reducing the phase space available by very small amounts and doing so in regions suppressed anyway. However, for very compressed spectra again this could cause nan issues as sqrts of negative numbers may be produced in the tiny regions where the previous limits of integration extended that are not actually in the real full expression limits of the integration. 
+<li>Both of these changes have negligible effects on the numerical values of PWs where there weren't nan or negative PW issues.
